@@ -24,6 +24,8 @@
 #include "../platform/platform.h"
 #include "../rct12/RCT12.h"
 #include "../scenario/Scenario.h"
+#include "../scripting/HookEngine.h"
+#include "../scripting/ScriptEngine.h"
 #include "../util/Util.h"
 #include "../windows/Intent.h"
 #include "../world/Map.h"
@@ -737,6 +739,31 @@ template<> bool SpriteBase::Is<Vehicle>() const
 {
     return Type == EntityType::Vehicle;
 }
+
+#ifdef ENABLE_SCRIPTING
+/**
+ * Fires the "vehicle.crash" api hook
+ * @param vehicleId Entity id of the vehicle that just crashed
+ * @param crashId What the vehicle crashed into. Should be either "another_vehicle", "land", or "water"
+ */
+static void InvokeVehicleCrashHook(const uint16_t vehicleId, const std::string_view crashId)
+{
+    auto& hookEngine = OpenRCT2::GetContext()->GetScriptEngine().GetHookEngine();
+    if (hookEngine.HasSubscriptions(OpenRCT2::Scripting::HOOK_TYPE::VEHICLE_CRASH))
+    {
+        auto ctx = OpenRCT2::GetContext()->GetScriptEngine().GetContext();
+
+        // Create event args object
+        auto obj = OpenRCT2::Scripting::DukObject(ctx);
+        obj.Set("id", vehicleId);
+        obj.Set("crashIntoType", crashId);
+
+        // Call the subscriptions
+        auto e = obj.Take();
+        hookEngine.Call(OpenRCT2::Scripting::HOOK_TYPE::VEHICLE_CRASH, e, true);
+    }
+}
+#endif
 
 static bool vehicle_move_info_valid(
     VehicleTrackSubposition trackSubposition, track_type_t type, uint8_t direction, int32_t offset)
@@ -3598,6 +3625,10 @@ void Vehicle::UpdateCollisionSetup()
 
         train->sub_state = 2;
 
+#ifdef ENABLE_SCRIPTING
+        InvokeVehicleCrashHook(train->sprite_index, "another_vehicle");
+#endif
+
         OpenRCT2::Audio::Play3D(OpenRCT2::Audio::SoundId::Crash, { train->x, train->y, train->z });
 
         ExplosionCloud::Create({ train->x, train->y, train->z });
@@ -5334,6 +5365,10 @@ void Vehicle::CrashOnLand()
     }
     SetState(Vehicle::Status::Crashed, sub_state);
 
+#ifdef ENABLE_SCRIPTING
+    InvokeVehicleCrashHook(sprite_index, "land");
+#endif
+
     if (!(curRide->lifecycle_flags & RIDE_LIFECYCLE_CRASHED))
     {
         auto frontVehicle = GetHead();
@@ -5395,6 +5430,10 @@ void Vehicle::CrashOnWater()
         return;
     }
     SetState(Vehicle::Status::Crashed, sub_state);
+
+#ifdef ENABLE_SCRIPTING
+    InvokeVehicleCrashHook(sprite_index, "water");
+#endif
 
     if (!(curRide->lifecycle_flags & RIDE_LIFECYCLE_CRASHED))
     {
